# medai-server

./: .env  Cargo.toml  README.md
src/: ._main.rs  main.rs
src/handlers/: ._team_member.rs  mod.rs  team_member.rs
src/models/: ._team_member.rs  team_member.rs
src/sql/: schema.sql
